--- a/3framework-overview.tex
+++ b/3framework-overview.tex
@@ -1,8 +1,8 @@
 %!TEX ROOT = thesis.tex
 \chapter{Framework Overview}
-
+\label{chapter:framework}
 \section{Introduction}
-In order to tackle the issues identified through the research questions and literature review, the theoretical framework is laid as to provide a conceptual schema on how to break the rather huge and intricate challenge into multiple bite sized puzzles. First, the overview of the proposed framework used in this work is described in Section \ref{section:framework}. Next, the description of the dataset used is described in Section \ref{section:dataset_used} and finally, this chapter concludes with the experimental methodology applied in this work to obtain the published results (see Section \ref{sec:expmethodology}). 
+In order to tackle the issues identified through the research questions and literature review, the theoretical framework is laid as to provide a conceptual schema to break the rather huge and intricate challenge into multiple bite sized puzzles. First, the overview of the proposed framework used in this work is described in Section \ref{section:framework}. Next, the description of the dataset used is described in Section \ref{section:dataset_used} and finally, this chapter concludes with the experimental methodology applied in this work to obtain the published results (see Section \ref{sec:expmethodology}). 
 
 
 
