--- a/llt.bib
+++ b/llt.bib
@@ -731,3 +731,10 @@ year = {2013}
 title={Colour metric}, 
 author={Riemersma, Thiadmer},
 journal={Colour metric: https://www.compuphase.com/cmetric.htm},   year={2018}} 
+
+@article{woodhouse2016big,
+  title={Big, big, big data: higher and higher resolution video surveillance},
+  author={Woodhouse, J},
+  journal={technology. ihs. com},
+  year={2016}
+}
